fix: correct button spacing in NavComponent

--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -112,7 +112,7 @@ section {
       a {
         @include dFlex();
         padding: 8px 36px;
-        width: 200px;
+        width: 190px;
         border-radius: 10px;
         white-space: nowrap;
       }
